Fixing logo not showing and adjusting breakpoints to match javascript

--- a/src/components/_default.scss
+++ b/src/components/_default.scss
@@ -1,6 +1,7 @@
 *, *:before, *:after {
 
 	position: relative;
+	background-repeat: no-repeat;
 	box-sizing: border-box;
 	
 }
